Fix the issue with global view reset button covering zoom slider button
The global view reset button top alignment has also been adjusted to match the panel toggle button.

Part of PT-812
Merged in bugfix/PT-812-global-view-reset (pull request #305)
Approved-by: Gursharn Singh

--- a/biod.insights.app/src/map/_esrimap.scss
+++ b/biod.insights.app/src/map/_esrimap.scss
@@ -100,7 +100,7 @@
 }
 
 #map-div_zoom_slider {
-  top: 50px;
+  top: 90px;
   right: 20px;
   left: unset;
   left: auto;
