--- a/biod.insights.app/src/map/globalViewReset/style.scss
+++ b/biod.insights.app/src/map/globalViewReset/style.scss
@@ -1,6 +1,6 @@
 ﻿#gd-global-view-reset {
   position: absolute;
-  top: 65px;
+  top: 59px;
   right: 20px;
   padding: 6px 6px 0px 6px;
   margin: 0;
